# poly-maker

./: .env.example  README.md  pyproject.toml  requirements.txt  test_google_sheets.py  trading.py  update_markets.py
data_updater/: find_markets.py  trading_utils.py
poly_data/: polymarket_client.py  trading_utils.py
poly_merger/: merge.js
